// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pagination > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-10 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <button
            aria-current="true"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            1
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
        </div>
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly component with disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-10 {
  width: 2.5rem;
}

.emotion-13 {
  color: #b5b7bd;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2.5rem;
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            1
          </button>
          <span
            class="emotion-12 emotion-13 emotion-14"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            4
          </button>
          <button
            aria-current="true"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            disabled=""
            type="button"
          >
            5
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            6
          </button>
          <span
            class="emotion-12 emotion-13 emotion-14"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            disabled=""
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly component with pageTabCount 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-10 {
  width: 2.5rem;
}

.emotion-13 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2.5rem;
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <span
            class="emotion-12 emotion-13 emotion-14"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            11
          </button>
          <button
            aria-current="true"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            12
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            13
          </button>
          <span
            class="emotion-12 emotion-13 emotion-14"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            16
          </button>
        </div>
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with page < 1 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-10 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            2
          </button>
        </div>
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with page > pageCount 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-10 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            2
          </button>
        </div>
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with pageClick 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-10 {
  width: 2.5rem;
}

.emotion-21 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2.5rem;
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="true"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
          <span
            class="emotion-20 emotion-21 emotion-22"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with pageCount is 1 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-10 {
  width: 2.5rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <button
            aria-current="true"
            class="emotion-10 emotion-11 styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            1
          </button>
        </div>
        <div
          class="emotion-4 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_medium__e1wcoe2 styles_fullWidth_false__e1wcoe6 styles_disabled_true__e1wcoej styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            disabled=""
            type="button"
          >
            <svg
              class="emotion-6 emotion-7"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with perPage - default values 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #727683;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  width: 100%;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: none;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-height="true"] {
  height: 100%;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-13 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-13[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-13[data-size='medium'] {
  height: 2.5rem;
}

.emotion-13[data-size='large'] {
  height: 3rem;
}

.emotion-13[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-13[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-13[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-13[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-13[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-13[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-13[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-13[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-13[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-13[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-13[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-13:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-13[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-13[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-16 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-20 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-20 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-28 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-32 {
  width: 2rem;
}

.emotion-43 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2rem;
  width: 2rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <span
          class="emotion-4 emotion-5"
        >
          Items per page
        </span>
        <div
          aria-label="select-items-per-page"
          class="emotion-6 emotion-7 emotion-8"
        >
          <div
            aria-controls="_r_1f_"
            aria-describedby="_r_1f_"
            class="emotion-9 emotion-10"
            data-container-full-width="true"
            tabindex="-1"
          >
            <div
              class="emotion-11 emotion-1"
            >
              <div
                aria-controls="_r_1f_"
                aria-expanded="false"
                class="emotion-13 emotion-14"
                data-disabled="false"
                data-dropdownvisible="false"
                data-readonly="false"
                data-size="small"
                data-state="neutral"
                data-testid="select-input-select-items-per-page"
                id="_r_1e_"
                role="combobox"
                tabindex="0"
              >
                <div
                  class="emotion-15 emotion-16 emotion-5"
                >
                  10
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <svg
                    aria-label="show dropdown"
                    class="emotion-20 emotion-21"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="emotion-4 emotion-5"
        >
          11-20 of 100 items"
        </span>
      </div>
      <div
        class="emotion-24 emotion-1"
      >
        <div
          class="emotion-26 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-28 emotion-21"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-30 emotion-31"
        >
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="true"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
          <span
            class="emotion-42 emotion-43 emotion-5"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="emotion-26 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-28 emotion-21"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`pagination > should render correctly with perPage 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-4 {
  color: #727683;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  width: 100%;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  min-width: none;
}

.emotion-9 {
  display: inherit;
}

.emotion-9[data-container-full-height="true"] {
  height: 100%;
}

.emotion-9[data-container-full-width="true"] {
  width: 100%;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-13 {
  display: grid;
  width: 100%;
  gap: 0.5rem;
  grid-template-columns: 1fr auto;
  padding: 0.5rem;
  padding-right: 0;
  padding-left: 1rem;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 0.25rem;
  width: 100%;
}

.emotion-13[data-size='small'] {
  height: 2rem;
  padding-left: 0.5rem;
}

.emotion-13[data-size='medium'] {
  height: 2.5rem;
}

.emotion-13[data-size='large'] {
  height: 3rem;
}

.emotion-13[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-13[data-state='neutral']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-13[data-state='neutral']:not([data-disabled='true']):hover {
  border-color: #792dd4;
  outline: none;
}

.emotion-13[data-state='neutral']:not([data-disabled='true']):focus-visible {
  outline: 5px auto Highlight;
  outline: 5px auto -webkit-focus-ring-color;
}

.emotion-13[data-state='neutral'][data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-13[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-13[data-state='success']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #1b533f;
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.emotion-13[data-state='success'][data-dropdownvisible='true'] {
  border-color: #1b533f;
}

.emotion-13[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-13[data-state='danger']:not([data-disabled="true"]):not([data-readonly="true"]):active {
  border-color: #92103f;
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.emotion-13[data-state='danger'][data-dropdownvisible='true'] {
  border-color: #92103f;
}

.emotion-13:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-13[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-13[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-16 {
  color: #3f4250;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  padding-right: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-20 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-20 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.5rem;
}

.emotion-28 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-28 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

.emotion-32 {
  width: 2rem;
}

.emotion-43 {
  color: #3f4250;
  font-size: 1rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  padding: 0.5rem;
  height: 2rem;
  width: 2rem;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <span
          class="emotion-4 emotion-5"
        >
          test
        </span>
        <div
          aria-label="select-items-per-page"
          class="emotion-6 emotion-7 emotion-8"
        >
          <div
            aria-controls="_r_1v_"
            aria-describedby="_r_1v_"
            class="emotion-9 emotion-10"
            data-container-full-width="true"
            tabindex="-1"
          >
            <div
              class="emotion-11 emotion-1"
            >
              <div
                aria-controls="_r_1v_"
                aria-expanded="false"
                class="emotion-13 emotion-14"
                data-disabled="false"
                data-dropdownvisible="false"
                data-readonly="false"
                data-size="small"
                data-state="neutral"
                data-testid="select-input-select-items-per-page"
                id="_r_1u_"
                role="combobox"
                tabindex="0"
              >
                <div
                  class="emotion-15 emotion-16 emotion-5"
                >
                  10
                </div>
                <div
                  class="emotion-18 emotion-19"
                >
                  <svg
                    aria-label="show dropdown"
                    class="emotion-20 emotion-21"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          class="emotion-4 emotion-5"
        >
          11-20 items
        </span>
      </div>
      <div
        class="emotion-24 emotion-1"
      >
        <div
          class="emotion-26 emotion-1"
        >
          <button
            aria-label="Back"
            class=" styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-28 emotion-21"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M10.53 4.22a.75.75 0 0 1 0 1.06L7.81 8l2.72 2.72a.75.75 0 1 1-1.06 1.06L6.22 8.53a.75.75 0 0 1 0-1.06l3.25-3.25a.75.75 0 0 1 1.06 0"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="emotion-30 emotion-31"
        >
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            1
          </button>
          <button
            aria-current="true"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
            type="button"
          >
            2
          </button>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            3
          </button>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            4
          </button>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            5
          </button>
          <span
            class="emotion-42 emotion-43 emotion-5"
          >
            ...
          </span>
          <button
            aria-current="false"
            class="emotion-32 emotion-33 styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_neutral__e1wcoed styles_undefined_compound_15__e1wcoe10"
            type="button"
          >
            10
          </button>
        </div>
        <div
          class="emotion-26 emotion-1"
        >
          <button
            aria-label="Next"
            class=" styles__e1wcoe0 styles_size_small__e1wcoe3 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_outlined__e1wcoeh styles_sentiment_primary__e1wcoe7 styles_undefined_compound_9__e1wcoeu"
            type="button"
          >
            <svg
              class="emotion-28 emotion-21"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M6.22 4.22a.75.75 0 0 1 1.06 0l3.25 3.25a.75.75 0 0 1 0 1.06l-3.25 3.25a.75.75 0 0 1-1.06-1.06L8.94 8 6.22 5.28a.75.75 0 0 1 0-1.06"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
